# res-stream-dim

./: .gitignore  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt
configs/: default.json
docs/: research_paper_summary.md
scripts/: backfill_incorrect_activations.py  compute_metrics.py  plot_custom_math_pca_trajectory.py  plot_results.py  run_all.py  run_inference.py
slurm/: backfill_incorrect_activations.sbatch  run_inference_array.sbatch  run_postprocess.sbatch  submit_backfill_pipeline.sh  submit_pipeline.sh
src/geometric_complexity_scaling/: __init__.py  aggregate.py  backfill.py  cli.py  custom_math.py  geometry.py  inference.py  modeling.py  plotting.py  scoring.py  tasks.py  utils.py
tests/: __init__.py  test_answer_scoring.py  test_cli_smoke.py  test_custom_math.py  test_gemma_chat.py  test_geometry.py  test_slurm_scripts.py  test_task_schemas.py
